<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">>

        <TextView
            android:id="@+id/txvTituloNovoServico"
            style="@style/subTitulosServico"
            android:text="@string/txvTituloNovoServico" />


        <RelativeLayout style="@style/inputTextLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTipoServico"
                    style="@style/labelTelaServico"
                    android:text="@string/labelTipoServico" />

                <Spinner
                    android:id="@+id/spnTipoServico"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/txvTituloEquipamento"
            style="@style/subTitulosServico"
            android:text="@string/tituloEquipamento" />

        <RelativeLayout style="@style/inputTextLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txvNumeroEquipamento"
                    style="@style/labelTelaServico"
                    android:text="@string/labelNumeroEquipamento" />

                <EditText
                    android:id="@+id/txtNumeroEquipamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/equipamentoHint"

                    />

                <TextView
                    android:id="@+id/txvTipoEquipamento"
                    style="@style/labelTelaServico"
                    android:text="@string/labelTipoEquipamento" />

                <Spinner
                    android:id="@+id/spnTipoEquipamento"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />/>

                <TextView
                    android:id="@+id/txvEquipamento"
                    style="@style/labelTelaServico"
                    android:text="@string/labelEquipamento" />


                <AutoCompleteTextView
                    android:id="@+id/txtAcEquipamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    android:textColorLink="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/txvLocalizacao"
                    style="@style/labelTelaServico"
                    android:text="@string/labelLocalizacao" />

                <AutoCompleteTextView
                    android:id="@+id/txtAcLocalizacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimaryDark" />


            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txvSolicitacao"
            style="@style/subTitulosServico"
            android:text="@string/tituloSolicitacao" />

        <RelativeLayout style="@style/inputTextLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txvAreaAtuacao"
                    style="@style/labelTelaServico"
                    android:text="@string/txvAreaAtuacao" />

                <Spinner
                    android:id="@+id/spnAreaAtuacao"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txvDescricaoAbertura"
                    style="@style/labelTelaServico"
                    android:text="@string/txvDescricaoServico" />

                <EditText
                    android:id="@+id/txtDescricaoAbertura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text|textMultiLine" />


                <TextView
                    android:id="@+id/txvSolicitante"
                    style="@style/labelTelaServico"
                    android:text="@string/txvSolicitante" />


                <EditText
                    android:id="@+id/txtSolicitante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />


                <TextView
                    android:id="@+id/txvTelefoneSolicitante"
                    style="@style/labelTelaServico"
                    android:text="@string/txvTelefone" />


                <EditText
                    android:id="@+id/txtTelefoneSolicitante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:text="" />

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:onClick="validarCarga"
            android:text="RefazerCarga" />

    </LinearLayout>

</ScrollView>
